2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set TAPER_STATE_TAPE_STARTED on NEW-TAPE

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Send dump to first storage

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Add vaulting information
	* server-src/amstatus.pl: Print vaulting information
	* installcheck/success-dumper-taper.pl: Fix for vaulting information

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Keep track of all label in use

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set wtaper->current_source_label

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set wtaper->current_dest_label

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Worker.pm: Set input_errors on Recovery error

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Scribe.pm (_dbg): Improve debugging

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Controller.pm: Quit the Clerk on START_TAPER,
	  Add debugging

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm (_scan_): Set scanning to 0 on error

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm, perl/Amanda/Changer/diskflat.pm: Try to get
	  the lock more often, otherwise we might never get it if another
	  thread lock it often

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/match.c (match_labelstr_template, match_labelstr):
	  Checklabel is not NULL

2018-01-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda.conf.5.xml: Add rest-api-port

2018-01-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl: Typo

2018-01-10  Jean-Louis Martineau <JMartineau@carbonite.com>